// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A small person BMI 0 | Should Select a Gender 1`] = `
Object {
  "msg": "SelectGender Female",
  "newModel": "{ height = \\"180\\", weight = \\"80\\", gender = Female }",
}
`;

exports[`A small person BMI 1 | Should Select a Height 1`] = `
Object {
  "msg": "SelectHeight \\"150\\"",
  "newModel": "{ height = \\"150\\", weight = \\"80\\", gender = Female }",
}
`;

exports[`A small person BMI 2 | Should Select a Weight 1`] = `
Object {
  "msg": "SelectWeight \\"55\\"",
  "newModel": "{ height = \\"150\\", weight = \\"55\\", gender = Female }",
}
`;

exports[`A tall and slim person BMI 0 | Should Select a Gender 1`] = `
Object {
  "msg": "SelectGender Male",
  "newModel": "{ height = \\"180\\", weight = \\"80\\", gender = Male }",
}
`;

exports[`A tall and slim person BMI 1 | Should Select a Height 1`] = `
Object {
  "msg": "SelectHeight \\"190\\"",
  "newModel": "{ height = \\"190\\", weight = \\"80\\", gender = Male }",
}
`;

exports[`A tall and slim person BMI 2 | Should Select a Weight 1`] = `
Object {
  "msg": "SelectWeight \\"55\\"",
  "newModel": "{ height = \\"190\\", weight = \\"55\\", gender = Male }",
}
`;
